--- a/app/index.html
+++ b/app/index.html
@@ -84,12 +84,12 @@
 	
 					<div class="s-main-tags">
 						<div class="s-main-tag">Аккуратная установка</div>
-						<div class="s-main-tag">Предлагаем <br>
-								наилучшее расположение</div>
-						<div class="s-main-tag">Работаем <br>
-								с оптиковолокном</div>
-						<div class="s-main-tag">Цена <br>
-								завода-изготовителя</div>
+						<div class="s-main-tag">Предлагаем
+							<span>наилучшее расположение</span>	</div>
+						<div class="s-main-tag">Работаем 
+							<span>с оптиковолокном</span></div>
+						<div class="s-main-tag">Цена 
+								<span>завода-изготовителя</span></div>
 					</div>
 
 					<img src="./img/camera-1.png" class="camera" alt="">
@@ -124,7 +124,7 @@
 						<div class="col-xxs-12 col-xs-6 col-sm-3">
 							<div class="key">
 								<img src="./img/key-4.png" alt="">
-								<p>Клиентская поддержка и расширенная гарантия</p>
+								<p>Клиентская поддержка <span class="ib">и расширенная гарантия</span></p>
 							</div>
 						</div>
 					</div>
