--- a/app/index.html
+++ b/app/index.html
@@ -124,7 +124,7 @@
 						<div class="col-xxs-12 col-xs-6 col-sm-3">
 							<div class="key">
 								<img src="./img/key-4.png" alt="">
-								<p>Клиентская поддержка <span class="ib">и расширенная гарантия</span></p>
+								<p>Клиентская поддержка <br> и расширенная гарантия</p>
 							</div>
 						</div>
 					</div>
