--- a/app/index.html
+++ b/app/index.html
@@ -124,7 +124,7 @@
 						<div class="col-xxs-12 col-xs-6 col-sm-3">
 							<div class="key">
 								<img src="./img/key-4.png" alt="">
-								<p>Клиентская поддержка <br> и расширенная гарантия</p>
+								<p>Клиентская поддержка <span class="ib">и расширенная гарантия</span></p>
 							</div>
 						</div>
 					</div>
@@ -244,14 +244,14 @@
 					<div class="col-xxs-12 col-xs-6 col-sm-4 col-md-3">
 						<div class="client">
 							<img src="./img/client-11.png" alt="">
-							<p>Установка видеонаблюдения и установка музыкального сопровождения</p>
+							<p>Установка видеонаблюдения <span class="ib">и установка</span> музыкального сопровождения</p>
 						</div>
 					</div>
 					<div class="col-xxs-12 col-xs-6 col-sm-4 col-md-3">
 						<div class="client">
 							<img src="./img/client-12.png" alt="">
 							<p>Установка охранной сигнализации 
-									и передача на пульт охраны</p>
+									<span class="ib">и передача</span> на пульт охраны</p>
 						</div>
 					</div>
 				</div>
@@ -269,7 +269,7 @@
 						<div class="container">
 							<div class="desire">
 								<h3 class="info">Видеозапись со звуком</h3>
-								<p>Можно контролировать как разговаривает и ведет себя менеджер с клиентом, или контроль поведения клиента с помощью камеры со звуком</p>
+								<p>Можно контролировать как разговаривает <span class="ib">и ведет</span> себя менеджер <span class="ib">с клиентом</span>, или контроль поведения клиента <span class="ib">с помощью</span> камеры <span class="ib">со звуком</span></p>
 							</div>
 						</div>
 					</div>
@@ -279,7 +279,7 @@
 						<div class="container">
 							<div class="desire">
 								<h3 class="info">Антивандальная камера</h3>
-								<p>Камера, устойчивая к механическим повреждениям и влаге</p>
+								<p>Камера, устойчивая <span class="ib">к механическим</span> повреждениям <span class="ib">и влаге</span></p>
 							</div>
 						</div>
 					</div>
@@ -289,7 +289,7 @@
 						<div class="container">
 							<div class="desire">
 								<h3 class="info">Варифакал</h3>
-								<p>При высоких потолках мы можем увидеть и приблизить определенную зону (касса, погрузочные, разгрузочные зоны СВХ)</p>
+								<p>При высоких потолках мы можем увидеть <span class="ib">и приблизить</span> определенную зону (касса, погрузочные, разгрузочные зоны СВХ)</p>
 							</div>
 						</div>
 					</div>
@@ -299,7 +299,7 @@
 						<div class="container">
 							<div class="desire">
 								<h3 class="info">Инфракрасная подсветка</h3>
-								<p>Подсветка в ночное время – можно подобрать камеру с инфракрасником от 20 до 80 метров</p>
+								<p>Подсветка в ночное время – можно подобрать камеру <span class="ib">с инфракрасником</span> от 20 до 80 метров</p>
 								<p>Сверху: ИК выключена <br>
 								Снизу: ИК подсветк а включена</p>
 							</div>
@@ -987,7 +987,7 @@
 	</div>
 										
 	<link rel="stylesheet" href="css/libs.min.css">
-	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="css/main.min.css?v=1">
 	<script src="js/libs.min.js" defer></script>
 	<script src="js/main.min.js" defer></script>
 
